# linux-filesystem-sim

./: CMakeLists.txt  README.md
include/: utility.h
src/: file_operations.c  inode_manip.c  terminal.cpp  utility.c
